# nativeView

./: .gitignore  AGENTS.md  CHANGELOG.md  CLA.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  TODO.md  nativeview.pc.in
benchmarks/: bench_ipc.c  bench_shm.c
bindings/: README.md  nv_link_shim.c
bindings/java/: .gitignore  CMakeLists.txt  README.md  pom.xml
bindings/java/src/main/c/: nativeview_jni_api.c  nativeview_jni_hooks.c  nativeview_jni_internal.h  nativeview_jni_io.c
bindings/java/src/main/java/io/jamharah/nativeview/: NativeView.java  NvCloseListener.java  NvMessageListener.java  NvReadyListener.java  NvVersionInfo.java  NvWindowCfg.java
bindings/java/src/test/java/io/jamharah/nativeview/: NativeViewLoadTest.java
bindings/python/: README.md  pyproject.toml
bindings/python/nativeview/: __init__.py
bindings/rust/: Cargo.toml  README.md
bindings/rust/src/: nativeview.rs
build-ipc-test/: nativeview.pc  test_ipc
build-pascal/: hello
build-shared-test/: .ninja_deps  .ninja_log  build.ninja  nativeview.pc
build-static-pascal/: hello
cmake/: FetchWebView2.cmake  GenerateVersion.cmake  NvDetectWindowsPeToolchain.cmake
demo/: CMakeLists.txt  DEMO_PLAN.md  MAIN_DESIGN.md  README.md  index.html  main.c
demo/assets/: gen_demo_icons.py  test_file.txt
demo/css/: layout.css  reset.css  theme.css
demo/js/: demo_app.js  demo_clipboard.js  demo_core.js  demo_dialog.js  demo_fs.js  demo_ipc.js  demo_multiwindow.js  demo_notification.js  demo_screen.js  demo_shell.js  demo_tray.js  demo_window.js
demo/windows/: child.html  settings.html
docs/: Android-migration.md  Android.md  CSharp.md  Implementation.md  Java.md  Nim.md  Pascal.md  Rust.md  (+17 more)
examples/counter_ui/: CMakeLists.txt  main.c
examples/todo_app/c_todo/: CMakeLists.txt  clean_build.sh  main.c
examples/todo_app/c_todo/include/: todo_app.h  todo_bridge.h  todo_html.h  todo_store.h
examples/todo_app/c_todo/src/: todo_app.c  todo_bridge.c  todo_store.c
examples/todo_app/c_todo/tests/: test_todo_bridge.c  test_todo_store.c
examples/todo_app/c_todo/tools/: embed_html.py
examples/todo_app/rust_todo/: Cargo.toml  README.md  build_static.sh  run_tests.sh
examples/todo_app/rust_todo/src/: lib.rs  main.rs  todo_bridge.rs  todo_store.rs
examples/todo_app/rust_todo/tests/: test_todo_bridge.rs  test_todo_store.rs
examples/todo_app/rust_todo/tools/: embed_html_rust.py
modules/nv-core/: AGENTS.md  CMakeLists.txt
modules/nv-core/src/: nv_arena.c  nv_base64.c  nv_json.c  nv_log.c  nv_str.c  nv_util.c
modules/nv-core/tests/: test_arena.c  test_base64.c  test_helpers.c  test_helpers.h  test_json.c  test_json_compose.c  test_json_parse.c  test_log.c  test_str.c  test_util.c
modules/nv-designer/: AGENTS.md  CMakeLists.txt
modules/nv-http/: AGENTS.md  CMakeLists.txt
modules/nv-http/examples/: http_server_cli.c
modules/nv-http/include/: file_server.h  http_core.h  http_protocol.h  mime_types.h  socket_layer.h  url_parser.h
modules/nv-http/src/: file_server.c  http_core.c  http_protocol.c  mime_types.c  socket_layer_common.c  socket_layer_internal.h  url_parser.c
modules/nv-http/src/platform/: socket_layer_posix.c  socket_layer_windows.c
modules/nv-http/tests/: test_file_server.c  test_http_core.c  test_http_protocol.c  test_mime_types.c  test_socket_layer.c  test_url_parser.c
modules/nv-ipc/: AGENTS.md  CMakeLists.txt
modules/nv-ipc/src/: nv_ipc.c  nv_ipc_script.c  nv_ipc_script.h  nv_shm.c
modules/nv-ipc/tests/: test_helpers.c  test_helpers.h  test_ipc.c  test_ipc_script.c  test_shm.c
modules/nv-ops/: AGENTS.md  CMakeLists.txt
modules/nv-ops/src/: nv_op_app.c  nv_op_app.h  nv_op_app_menu.c  nv_op_clipboard.c  nv_op_clipboard.h  nv_op_dialog.c  nv_op_dialog.h  nv_op_fs.c  nv_op_fs.h  nv_op_fs_watch.c  nv_op_ipc_bus.c  nv_op_ipc_bus.h  nv_op_notification.c  nv_op_notification.h  nv_op_registry.c  nv_op_registry.h  nv_op_screen.c  nv_op_screen.h  nv_op_shell.c  nv_op_shell.h  nv_op_tray.c  nv_op_tray.h  nv_op_window.c  nv_op_window.h  nv_op_window_hotkey.c  nv_op_window_hotkey.h  nv_op_windows.c  nv_op_windows.h
modules/nv-ops/tests/: test_helpers.c  test_helpers.h  test_op_app.c  test_op_app_menu.c  test_op_clipboard.c  test_op_dialog.c  test_op_fs.c  test_op_fs_watch.c  test_op_fs_watch_integration.c  test_op_hotkey.c  test_op_ipc_bus.c  test_op_notification.c  test_op_screen.c  test_op_shell.c  test_op_tray.c  test_op_window.c  test_op_window_menu.c  test_op_windows.c
modules/nv-platform-android/: CMakeLists.txt
modules/nv-platform-android/src/: nv_android.c  nv_android_host.h  nv_android_jni_hooks.c  nv_android_jni_hooks.h  nv_android_nativeview_jni.c
modules/nv-platform-ios/: CMakeLists.txt
modules/nv-platform-ios/src/: nv_ios.m
modules/nv-platform-linux/: AGENTS.md  CMakeLists.txt
modules/nv-platform-linux/src/: nv_linux.c  nv_linux_fs_watch.c  nv_linux_hotkey.c  nv_linux_tray.c
modules/nv-platform-mac/: AGENTS.md  CMakeLists.txt
modules/nv-platform-mac/src/: nv_mac.m  nv_mac_fs_watch.m  nv_mac_hotkey.m  nv_mac_menu.m
modules/nv-platform-win/: AGENTS.md  CMakeLists.txt
modules/nv-platform-win/src/: nv_win.c  nv_win_clipboard_image.cpp  nv_win_dialog_file.c  nv_win_dialog_message.c  nv_win_env_options.cpp  nv_win_fs_watch.c  nv_win_fs_watch.h  nv_win_hotkey.c  nv_win_hotkey.h  nv_win_notification.c  nv_win_tray.c  nv_win_tray.h
modules/nv-runtime/: AGENTS.md  CMakeLists.txt
modules/nv-runtime/src/: nv_core.c  nv_hotkey.c  nv_hotkey_combo.c  nv_hotkey_stubs.c  nv_menu.c  nv_window.c  nv_window_context_menu.c  nv_window_manager.c  nv_window_manager.h
modules/nv-runtime/tests/: test_helpers.c  test_integration.c  test_main_thread.c  test_platform_api_dispatch.c  test_window.c  test_window_manager.c
modules/nv-sdk/: AGENTS.md  CMakeLists.txt
modules/nv-ui/: AGENTS.md  CMakeLists.txt
modules/nv-ui/include/: nv_ui.h  nv_vue_bundle.h
modules/nv-ui/src/: nv_component.c  nv_vue_slot.c  nv_widget.c  nv_widget_flush.c  nv_widget_paint.c
modules/nv-ui/tests/: test_component.c  test_object.c  test_widget.c
(+392 files in other folders)
